Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7105

Crash due to QMultiInputContext creating widget while application is destroyed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.1
    • 4.6.0
    • None
    • X11
    • f72165460d27860cabd51691f4d935fd74b50f80, 8b56ffee8bb4ec0c56c2c05ccc1e088f6d9ae8a8

    Description

      Reason for the crash:

      • The QApplication destructor sets allWidgets QSet to 0 before deleting all orphan widgets.
      • During the widget deletion, qwidget_x11 QWidget::destroy calls inputContext() to get the current application's input context.
      • If no input context has been created for the application yet, it creates an input context.
      • QMultiInputContext creates a QMenu widget, which again is added to allWidgets QSet. Since this is already 0, this will
        crash.

      Crash reported as KDE bugs 212618, 212857, 218878, 219973, 220853 (and possibly more duplicates).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            cfeck Christoph Feck
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes