Prevent a crash when creating an inputContext from the QApplication dtor.

Complete the fix in f72165460d27860cabd51691f4d935fd74b50f80 by applying
the same fix to Symbian and QWS.

Task-number: QTBUG-7105
Reviewed-by: Alexis
Reviewed-by: Jason McDonald